--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@angular-devkit/build-angular": "^0.901.0",
     "@angularclass/hmr": "^2.1.3",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "bootstrap": "^4.4.1",
     "@biesbjerg/ngx-translate-extract": "^4.2.0",
     "@ngx-rocket/scripts": "^4.0.0",
     "@types/jasmine": "^3.3.13",
